kubernetes/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: front-end
  labels: 
    app: front-end
spec: 
  selector: 
    matchLabels: 
      app: front-end
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: front-end
    spec: 
      containers: 
        - name: front-end
          image: ohsy818/kuber-ez:latest
          ports: 
            - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata: 
  name: webkubectl
  labels: 
    name: webkubectl
spec: 
  containers: 
    - name: webkubectl
      image: gcr.io/eventstorming-tool/webkubectl
      securityContext:
        privileged: true
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: api-server
  labels: 
    app: api-server
spec: 
  selector: 
    matchLabels: 
      app: api-server
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: api-server
    spec: 
      containers: 
        - name: api-server
          image: ohsy818/api-server:latest
          ports: 
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: front-end
  labels: 
    app: front-end
spec: 
  ports: 
    - port: 8081
      targetPort: 8080
  selector: 
    app: front-end
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: 
  name: webkubectl
  labels: 
    app: webkubectl
spec: 
  ports: 
    - port: 8082
      targetPort: 8080
  selector: 
    app: webkubectl
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: 
  name: k8s-tunneling-server
  labels: 
    app: k8s-tunneling-server
spec: 
  ports: 
    - port: 8080
      targetPort: 8080
  selector: 
    app: api-server
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: gateway
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules: 
    - host: kuberez.io
      http: 
        paths: 
          - backend: 
              serviceName: front-end
              servicePort: 8081
    - host: api.kuberez.io
      http: 
        paths: 
          - backend: 
              serviceName: k8s-tunneling-server
              servicePort: 8080
    - host: webkubectl.kuberez.io
      http: 
        paths: 
          - backend: 
              serviceName: webkubectl
              servicePort: 8082
